update post Numpy/scipy

--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -1937,17 +1937,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'> EXERCICE : Moyenne en ligne </font>\n",
-    "Ecrire une fonction qui calcule la moyenne $\\bar{x}_n$ de maniere recursive (sans \n",
-    "utiliser `np.sum`)\n",
+    "### <font color='red'> EXERCICE : On-line computation  of the mean </font>\n",
+    "Write a recursive function computing the mean $\\bar{x}_n$ (without using `np.sum`,`np.mean` etc.)\n",
     "\n",
-    "Hint:\n",
-    "\n",
+    "*Hint*:\n",
     "\n",
     "\\begin{align}\n",
     "\\bar{x}_{n} & = \\frac{1}{n} \\sum_{i=1}^{n}x_i \\\\\n",
     "              & = \\frac{1}{n} \\left(\\sum_{i=1}^{n-1} x_i  + x_{n} \\right)\\\\\n",
-    "              & = \\frac{1}{n} \\left( (n-1) \\cdot \\bar{x}_{n-1}  + x_{n} \\right)\\\\      \n",
+    "              & = \\frac{1}{n} \\left( (n-1) \\cdot \\bar{x}_{n-1}  + x_{n}\\right)\\\\ \n",
+    "              & = \\frac{n-1}{n}  \\cdot \\bar{x}_{n-1}  + \\frac{1}{n} x_{n}\\\\            \n",
     "\\end{align}"
    ]
   },
@@ -2679,7 +2678,7 @@
     "if (M > 5).all():\n",
     "    print(\"Tous les éléments de M sont plus grands que 5.\")\n",
     "else:\n",
-    "    print(\"Tous les éléments de M sont plus petits que 5.\")"
+    "    print(\"Il existe des éléments de M qui plus petits que 5.\")"
    ]
   },
   {
