--- a/Scipy/Scipy.ipynb
+++ b/Scipy/Scipy.ipynb
@@ -652,7 +652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'> EXERCISE : Mutlivariate Gaussian distribution</font>\n",
+    "### <font color='red'> EXERCISE : Norms computation</font>\n",
     "Check numerically what is the instruction  `linalg.norm(A, ord=np.inf)` really computing.\n",
     "Double check with the help."
    ]
