update on scipy and pandas

--- a/Scipy/Scipy.ipynb
+++ b/Scipy/Scipy.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -413,7 +413,7 @@
    "outputs": [],
    "source": [
     "# les instants du temps: de 0 à 10 secondes\n",
-    "t = np.linspace(0, 10, 250)"
+    "t = np.linspace(0, 10, 200)"
    ]
   },
   {
@@ -434,20 +434,35 @@
    "outputs": [],
    "source": [
     "# affichage des angles en fonction du temps\n",
-    "fig, axes = plt.subplots(1,2, figsize=(12,4))\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(8, 4))\n",
     "axes[0].plot(t, x[:, 0], 'r', label=\"theta1\")\n",
     "axes[0].plot(t, x[:, 1], 'b', label=\"theta2\")\n",
+    "axes[0].set_title(\"Angular evolution\")\n",
+    "\n",
     "\n",
     "x1 = + L * np.sin(x[:, 0])\n",
     "y1 = - L * np.cos(x[:, 0])\n",
     "x2 = x1 + L * np.sin(x[:, 1])\n",
     "y2 = y1 - L * np.cos(x[:, 1])\n",
-    "    \n",
-    "axes[1].plot(x1, y1, 'r', label=\"pendulum1\")\n",
-    "axes[1].plot(x2, y2, 'b', label=\"pendulum2\")\n",
+    "\n",
+    "# axes[1].plot(x1, y1, 'r', label=\"pendulum1\")\n",
     "axes[1].set_ylim([-1, 0])\n",
     "axes[1].set_xlim([1, -1])\n",
-    "plt.legend()"
+    "axes[1].set_title(\"Space evolution\")\n",
+    "for i in range(len(t)-1):\n",
+    "    axes[1].plot(x2[i:i+2], y2[i:i+2], '-', color='blue')\n",
+    "    axes[1].plot(x1[i], y1[i], '.', color='red', label=\"pendulum1\")\n",
+    "    fig.canvas.draw()\n",
+    "    fig.canvas.flush_events()\n",
+    "    plt.pause(0.001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='red'> EXERCISE : alpha and time </font>\n",
+    "Modify the code above so that on the right plot the older point in time are more transparent than the new ones.\n"
    ]
   },
   {
@@ -513,7 +528,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vérifier le résultat"
+    "# Check the result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Remark**: NEVER (or you should really know why) invert a matrix. ALWAYS solve linear systems instead!"
    ]
   },
   {
@@ -622,7 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# inversion\n",
+    "# inversion: please never use that :)\n",
     "linalg.inv(A)"
    ]
   },
@@ -643,7 +665,7 @@
    "outputs": [],
    "source": [
     "# normes\n",
-    "print(linalg.norm(A, ord='fro'))  # frobenius\n",
+    "print(linalg.norm(A, ord='fro'))  # fro for Frobenius\n",
     "print(linalg.norm(A, ord=2))\n",
     "print(linalg.norm(A, ord=np.inf))"
    ]
@@ -654,7 +676,7 @@
    "source": [
     "### <font color='red'> EXERCISE : Norms computation</font>\n",
     "Check numerically what is the instruction  `linalg.norm(A, ord=np.inf)` really computing.\n",
-    "Double check with the help."
+    "Double check with the help, and a numerical test."
    ]
   },
   {
@@ -703,7 +725,9 @@
    "outputs": [],
    "source": [
     "x = np.linspace(-5, 3, 100)\n",
-    "plt.plot(x, f(x))"
+    "plt.figure()\n",
+    "plt.plot(x, f(x))\n",
+    "plt.show()"
    ]
   },
   {
@@ -720,7 +744,7 @@
    "outputs": [],
    "source": [
     "x_min = optimize.fmin_bfgs(f, x0=-3)\n",
-    "\n",
+    "plt.figure()\n",
     "plt.plot(x, f(x))\n",
     "plt.plot(x_min, f(x_min),'o')"
    ]
@@ -729,9 +753,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trouver les zéros d'une fonction\n",
+    "### <font color='red'> EXERCISE : Bassin of attraction</font>\n",
     "\n",
-    "Trouver $x$ tel que $f(x) = 0$. On va utiliser `fsolve`."
+    "Draw the points on the curves with 2 different color : orange for the points leading to find the left local minima, and red for the points leading to the right local minima.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find the zeros of a function\n",
+    "\n",
+    "Find $x$ such that $f(x) = 0$, with `fsolve`."
    ]
   },
   {
@@ -755,6 +788,7 @@
     "y = f(x)\n",
     "mask = np.where(np.abs(y) > 50)\n",
     "x[mask] = y[mask] = np.nan # get rid of vertical line when the function flip sign\n",
+    "plt.figure()\n",
     "plt.plot(x, y)\n",
     "plt.plot([0, 3.3], [0, 0], 'k')\n",
     "plt.ylim(-5,5)"
@@ -803,9 +837,12 @@
    "outputs": [],
    "source": [
     "my_zeros = np.unique((optimize.fsolve(f, np.linspace(0.2, 3, 20)) * 1000).astype(int)) / 1000.\n",
-    "plt.plot(x, y)\n",
+    "plt.figure()\n",
+    "plt.plot(x, y, label='$f$')\n",
     "plt.plot([0, 3.3], [0, 0], 'k')\n",
-    "plt.plot(my_zeros,np.zeros(my_zeros.shape),'o')"
+    "plt.plot(my_zeros,np.zeros(my_zeros.shape),'o', label='$x : f(x)=0$')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -823,11 +860,13 @@
    "source": [
     "from scipy.optimize import curve_fit\n",
     "\n",
+    "\n",
     "def f(x, a, b, c):\n",
     "    \"\"\"\n",
     "    f(x) = a exp(-bx) + c\n",
     "    \"\"\"\n",
     "    return a*np.exp(-b*x) + c\n",
+    "\n",
     "\n",
     "x = np.linspace(0, 4, 50)\n",
     "y = f(x, 2.5, 1.3, 0.5)  # true signal\n",
@@ -840,8 +879,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure()\n",
     "plt.plot(x, yn,'.')\n",
-    "plt.plot(x, y, 'r')"
+    "plt.plot(x, y, 'k', label='$f$')\n",
+    "plt.legend()"
    ]
   },
   {
@@ -876,9 +917,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(x, yn, '.')\n",
-    "plt.plot(x, y, 'r')\n",
-    "plt.plot(x, f(x, a, b, c))"
+    "plt.figure()\n",
+    "plt.plot(x, yn, '.', label='data')\n",
+    "plt.plot(x, y, 'k', label='True $f$')\n",
+    "plt.plot(x, f(x, a, b, c),'--k', label='Estimated $\\hat{f}$')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -897,8 +941,11 @@
     "x = np.linspace(0,1,10)\n",
     "y = np.sin(x * np.pi / 2.)\n",
     "line = np.polyfit(x, y, deg=10)\n",
-    "plt.plot(x, y, '.')\n",
-    "plt.plot(x, np.polyval(line,x), 'r')\n",
+    "plt.figure()\n",
+    "plt.plot(x, y, '.', label='data')\n",
+    "plt.plot(x, np.polyval(line,x), 'k--', label='polynomial approximation')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
     "# xx = np.linspace(-5,4,100)\n",
     "# plt.plot(xx, np.polyval(line,xx), 'g')"
    ]
@@ -964,11 +1011,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure()\n",
     "plt.plot(n, y_meas, 'bs', label='noisy data')\n",
     "plt.plot(x, y_real, 'k', lw=2, label='true function')\n",
     "plt.plot(x, y_interp1, 'r', label='linear interp')\n",
     "plt.plot(x, y_interp2, 'g', label='cubic interp')\n",
-    "plt.legend(loc=3);"
+    "plt.legend(loc=3)\n",
+    "plt.show()"
    ]
   },
   {
@@ -995,6 +1044,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_1 , n_2, n_3 = img.shape\n",
+    "np.unique(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
     "plt.imshow(img, cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
     "plt.show()"
@@ -1005,9 +1065,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "_ = plt.hist(img.reshape(img.size),200)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1016,9 +1074,9 @@
    "outputs": [],
    "source": [
     "print(img.flags)  #cannot edit...\n",
-    "img = img.copy()\n",
-    "img.setflags(write=1)\n",
-    "print(img.flags)  #can edit now"
+    "img_compressed = img.copy()\n",
+    "img_compressed.setflags(write=1)\n",
+    "print(img_compressed.flags)  #can edit now"
    ]
   },
   {
@@ -1027,11 +1085,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img[img < 70] = 50\n",
-    "img[(img >= 70) & (img < 110)] = 100\n",
-    "img[(img >= 110) & (img < 180)] = 150\n",
-    "img[(img >= 180)] = 200\n",
-    "plt.imshow(img, cmap=plt.cm.gray)\n",
+    "img_compressed[img_compressed < 70] = 50\n",
+    "img_compressed[(img_compressed >= 70) & (img_compressed < 110)] = 100\n",
+    "img_compressed[(img_compressed >= 110) & (img_compressed < 180)] = 150\n",
+    "img_compressed[(img_compressed >= 180)] = 200\n",
+    "plt.figure()\n",
+    "plt.imshow(img_compressed, cmap=plt.cm.gray)\n",
     "plt.axis('off')\n",
     "plt.show()"
    ]
@@ -1050,7 +1109,10 @@
    "outputs": [],
    "source": [
     "img_flou = ndimage.gaussian_filter(img, sigma=2)\n",
-    "plt.imshow(img_flou, cmap=plt.cm.gray)"
+    "plt.figure()\n",
+    "plt.imshow(img_flou, cmap=plt.cm.gray)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1066,12 +1128,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
-    "fig.set_size_inches(18.5, 10.5)\n",
-    "ax1.imshow(img[:,:,0], cmap=plt.cm.Reds)\n",
-    "ax2.imshow(img[:,:,1], cmap=plt.cm.Greens)\n",
-    "ax3.imshow(img[:,:,2], cmap=plt.cm.Blues)\n",
+    "img = (255 * plt.imread('https://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/486px-Flag_of_Brazil.svg.png')).astype(np.int)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.imshow(img)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(3, 2)\n",
+    "fig.set_size_inches(9, 6.5)\n",
+    "n_1 , n_2, n_3 = img.shape\n",
+    "\n",
+    "ax[0, 0].imshow(img[:, :, 0], cmap=plt.cm.Reds)\n",
+    "ax[0, 1].hist(img[:, :, 0].reshape(n_1 * n_2), np.arange(0,255))\n",
+    "\n",
+    "ax[1, 0].imshow(img[:, :, 1], cmap=plt.cm.Greens)\n",
+    "ax[1, 1].hist(img[:, :, 1].reshape(n_1 * n_2), np.arange(0,255))\n",
+    "\n",
+    "ax[2, 0].imshow(img[:, :, 2], cmap=plt.cm.Blues)\n",
+    "ax[2, 1].hist(img[:, :, 2].reshape(n_1 * n_2), np.arange(0,255))\n",
+    "\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='red'> EXERCISE : Color</font>\n",
+    "Change the color of the flag to make it frenchier (e.g. use blue, white, red)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(img)"
    ]
   },
   {
@@ -1087,15 +1187,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(np.mean(img, axis=2), cmap=plt.cm.gray)"
+    "plt.figure()\n",
+    "plt.imshow(np.mean(img, axis=2), cmap=plt.cm.gray)\n",
+    "plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# More for colors/ images:\n",
+    "http://josephsalmon.eu/enseignement/Montpellier/HLMA310/matplotlib_slides.pdf\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1208,7 +1311,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "413.833px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
