update TempMeomoire post course

--- a/TempsMemoire/TempsMemoire.ipynb
+++ b/TempsMemoire/TempsMemoire.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit a = np.ones(n)*val"
+    "%timeit a = np.ones(n) * val"
    ]
   },
   {
@@ -107,11 +107,21 @@
     "import time\n",
     "\n",
     "start = time.time()\n",
-    "\n",
     "a = np.ones(n)*val\n",
-    "\n",
     "end = time.time()\n",
+    "\n",
     "print(\"Temps passé pour exécuter la commande: {0:.5f} s.\".format(end - start))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For more on profiling\n",
+    "\n",
+    "In Python `snakeviz` could help, see https://jiffyclub.github.io/snakeviz/\n",
+    "\n",
+    "In R, `profvis` is equivalent, see https://rstudio.github.io/profvis/"
    ]
   },
   {
@@ -205,7 +215,51 @@
     "\n",
     "http://cmdlinetips.com/2018/03/sparse-matrices-in-python-with-scipy/\n",
     "\n",
-    "Un cadre classique d'application des matrices creuses est le cadre des graphes: bien que le nombre de noeuds puissent être énorme, chaque noeud d'un graphe n'est en général pas relié à tous ces voisins. Si on représente un grapha par ca matrice d'adjacence:"
+    "**Examples**:\n",
+    "\n",
+    "- natural language processing: we encode the presence of a word from a dictionary (let's say the set of French words) and we put 0 / 1 in case of absence / presence of a word.\n",
+    "- the discretization of a physical system where very distant influences are set to zero (e.g. heat diffusion, fluid mechanics, electro/magnetism, etc.)\n",
+    "- graphs: graphs are naturally represented by adjacency or incidence matrices (cf. below), and therefore beyond the graphs, maps!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import isspmatrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing when a matrix is sparse or not:\n",
+    "nx, ny = (50, 20)\n",
+    "x = np.linspace(0, 1, nx)\n",
+    "y = np.linspace(0, 1, ny)\n",
+    "xv, yv = np.meshgrid(x, y, sparse=True)\n",
+    "# print(xv)\n",
+    "print(yv)\n",
+    "isspmatrix(yv)\n",
+    "x = np.arange(-5, 5, 0.1)\n",
+    "y = np.arange(-5, 5, 0.1)\n",
+    "xx, yy = np.meshgrid(x, y, sparse=True)\n",
+    "z = np.sin(xx**2 + yy**2) / (xx**2 + yy**2)\n",
+    "h = plt.contourf(x,y,z)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graphs and sparsity\n",
+    "\n",
+    "Un cadre classique d'application des matrices creuses est le cadre des graphes: bien que le nombre de noeuds puissent être énorme, chaque noeud d'un graphe n'est en général pas relié à tous ces voisins. Si on représente un graphe par ca matrice d'adjacence:"
    ]
   },
   {
@@ -366,6 +420,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%HTML\n",
     "\n",
     "<iframe height=400px width=100% src='force.html'></iframe>"
@@ -388,7 +451,56 @@
     "\n",
     "or\n",
     "\n",
-    "```pip install osmnx==0.10```"
+    "```pip install osmnx==0.10```\n",
+    "\n",
+    "\n",
+    "\n",
+    "For Windows users there might be some trouble with installing the `fiona` package, see:\n",
+    "https://stackoverflow.com/questions/54734667/error-installing-geopandas-a-gdal-api-version-must-be-specified-in-anaconda\n",
+    "and \n",
+    "https://jingwen-z.github.io/how-to-install-python-module-fiona-on-windows-os/\n",
+    "\n",
+    "\n",
+    "Special case for `osmnx` on `Windows` follow the next step in order:\n",
+    "* `pip install osmnx`\n",
+    "* `pip install Rtree`\n",
+    "* `conda install -c conda-forge libspatialindex=1.9.3`\n",
+    "* `pip install osmnx`\n",
+    "\n",
+    "* Install all packages required up to `fiona`.\n",
+    "* `conda install -c conda-forge geopandas`\n",
+    "* say yes to everything\n",
+    "* Once done,  launch `pip install osmnx==0.10`\n",
+    "\n",
+    "You will also need to install the package `folium`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_osm = folium.Map(location=[43.610769, 3.876716])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_osm.add_child(folium.RegularPolygonMarker(location=[43.610769, 3.876716], fill_color='#132b5e', radius=5))\n",
+    "map_osm"
    ]
   },
   {
@@ -518,8 +630,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creation d'une matrice de meme taille\n",
-    "M = np.random.randn(G.number_of_nodes(), G.number_of_nodes())"
+    "print(isspmatrix(D))\n",
+    "D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Alterntively**: you can uncomment the following line, and check that the size of a similar matrix, with non-sparse format would be\n",
+    "\n",
+    "```>>> Size of full matrix with zeros: 1677.47  MB```"
    ]
   },
   {
@@ -528,8 +649,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Size of full matrix with zeros: {0:3.2f}  MB'.format(M.nbytes/(1024**2)))"
+    "# # Creation d'une matrice de meme taille\n",
+    "# # BEWARE CREATE HUGE MATRIX:\n",
+    "# M = np.random.randn(G.number_of_nodes(), G.number_of_nodes())\n",
+    "# print('Size of full matrix with zeros: {0:3.2f}  MB'.format(M.nbytes/(1024**2)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -566,13 +697,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -590,7 +714,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = geopandas.read_file(geopandas.datasets.get_path('nybb'))\n",
+    "ax = df.plot(figsize=(10, 10), alpha=0.5, edgecolor='k')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
