cosmit on numba and feedback

--- a/Numba/Numba.ipynb
+++ b/Numba/Numba.ipynb
@@ -10,7 +10,7 @@
     "Numba convertit les fonctions Python en code machine optimisé au moment de l'exécution à l'aide de la bibliothèque de compilateur LLVM standard.\n",
     "Les algorithmes numériques compilés par Numba en Python peuvent alors approcher les vitesses de C ou de FORTRAN, la où les boucles classiques, comme en R et matlab, peuvent être un peu lente.\n",
     "\n",
-    "https://numba.pydata.org/"
+    "https://numba.pydata.org/ see also https://numba.pydata.org/numba-doc/dev/user/jit.html"
    ]
   },
   {
@@ -28,7 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exemple 1: Méthode de Monte Carlo pour approcher $\\pi$"
+    "# Exemple 1: Méthode de Monte Carlo pour approcher $\\pi$\n",
+    "See https://numba.pydata.org/numba-doc/dev/glossary.html#term-nopython-mode for why typing `nopython=True` below."
    ]
   },
   {
@@ -37,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@jit(nopython=True)\n",
+    "@jit(nopython=True) \n",
     "def monte_carlo_pi(n_samples=1000):\n",
     "    acc = 0\n",
     "    for sample in range(n_samples):\n",
