simplify trace exemple in numba

--- a/Numba/Numba.ipynb
+++ b/Numba/Numba.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed (with compilation) = 4.441860914230347\n",
+      "Elapsed (after compilation) = 0.0003955364227294922\n"
+     ]
+    }
+   ],
    "source": [
     "# DO NOT REPORT THIS... COMPILATION TIME IS INCLUDED IN THE EXECUTION TIME!\n",
     "start = time.time()\n",
@@ -76,14 +85,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "Elapsed (with compilation) = 0.24956941604614258\n",
+      "Elapsed (after compilation) = 7.867813110351562e-06\n",
+      "Elapsed (vanilla) = 0.0005931854248046875\n",
+      "5000\n",
+      "Elapsed (with compilation) = 0.08341431617736816\n",
+      "Elapsed (after compilation) = 7.05718994140625e-05\n",
+      "Elapsed (vanilla) = 0.0014367103576660156\n",
+      "10000\n",
+      "Elapsed (with compilation) = 0.0842597484588623\n",
+      "Elapsed (after compilation) = 0.0002067089080810547\n",
+      "Elapsed (vanilla) = 0.0021851062774658203\n",
+      "[1000, 5000, 10000]\n",
+      "Améliorations en pourcentage par rapport au code vanilla\n",
+      "[41972.74919614  5705.92432791  3756.09383524]\n",
+      "[-98.67363344 -95.08795221 -90.5400982 ]\n"
+     ]
+    }
+   ],
    "source": [
     "def go_slow(a):  # Function is compiled and runs in machine code\n",
     "    trace = 0\n",
-    "    for i in range(a.shape[0] - 1):\n",
-    "        trace += np.tanh(a[i, i + 1])\n",
+    "    for i in range(a.shape[0]):\n",
+    "        trace += a[i, i]\n",
     "    return trace\n",
     "\n",
     "\n",
@@ -99,8 +131,8 @@
     "    @jit(nopython=True)\n",
     "    def go_fast(a):  # Function is compiled and runs in machine code\n",
     "        trace = 0\n",
-    "        for i in range(a.shape[0] - 1):\n",
-    "            trace += np.tanh(a[i, i + 1])\n",
+    "        for i in range(a.shape[0]):\n",
+    "            trace += a[i, i]\n",
     "        return trace\n",
     "    # COMPILATION INCLUSE!\n",
     "    start = time.time()\n",
