--- a/Statsmodels/Statsmodels.ipynb
+++ b/Statsmodels/Statsmodels.ipynb
@@ -2667,7 +2667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `sklearn`: exemple de la syntaxe des moindre carrés"
+    "# `sklearn`: another least squares syntax "
    ]
   },
   {
@@ -3578,7 +3578,7 @@
     }
    ],
    "source": [
-    "sol=matrix.inv()\n",
+    "sol = matrix.inv()\n",
     "sol"
    ]
   },
