update visu with sparse matrix and random walk movie

--- a/Statsmodels/Statsmodels.ipynb
+++ b/Statsmodels/Statsmodels.ipynb
@@ -102,9 +102,21 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['vol', 'aire'], dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_arbres = pd.read_csv(\"arbres.txt\",sep=' ')"
+    "df_arbres = pd.read_csv(\"arbres.txt\",sep=' ')\n",
+    "df_arbres.columns"
    ]
   },
   {
@@ -146,7 +158,7 @@
        "  <th>Date:</th>             <td>Thu, 26 Mar 2020</td> <th>  Prob (F-statistic):</th> <td>2.29e-07</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>08:33:01</td>     <th>  Log-Likelihood:    </th> <td>  27.418</td>\n",
+       "  <th>Time:</th>                 <td>10:34:27</td>     <th>  Log-Likelihood:    </th> <td>  27.418</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    10</td>      <th>  AIC:               </th> <td>  -50.84</td>\n",
@@ -196,7 +208,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.966\n",
        "Method:                 Least Squares   F-statistic:                     257.2\n",
        "Date:                Thu, 26 Mar 2020   Prob (F-statistic):           2.29e-07\n",
-       "Time:                        08:33:01   Log-Likelihood:                 27.418\n",
+       "Time:                        10:34:27   Log-Likelihood:                 27.418\n",
        "No. Observations:                  10   AIC:                            -50.84\n",
        "Df Residuals:                       8   BIC:                            -50.23\n",
        "Df Model:                           1                                         \n",
