--- a/Numba/Numba.ipynb
+++ b/Numba/Numba.ipynb
@@ -5,10 +5,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Numba: compilation \"Just in Time\" (jit)\n",
+    "# Numba: Compilation \"Just in Time\" (jit)\n",
     "\n",
-    "Numba convertit les fonctions Python en code machine optimisé au moment de l'exécution à l'aide de la bibliothèque de compilateur LLVM standard.\n",
-    "Les algorithmes numériques compilés par Numba en Python peuvent alors approcher les vitesses de C ou de FORTRAN, la où les boucles classiques, comme en R et matlab, peuvent être un peu lente.\n",
+    "Numba converts Python functions into optimized machine code at runtime using thhe standard LLVM compiler library. Then the numerical algorithms compiled by Numba in Python can approach the speeds of C or FORTRAN, where the classic loops like in R and matlab, can be a bit slow.\n",
     "\n",
     "https://numba.pydata.org/ see also https://numba.pydata.org/numba-doc/dev/user/jit.html"
    ]
@@ -32,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exemple 1: Méthode de Monte Carlo pour approcher $\\pi$\n",
+    "# Example 1: Monte Carlo method to approach $\\pi$\n",
     "See https://numba.pydata.org/numba-doc/dev/glossary.html#term-nopython-mode for why typing `nopython=True` below.\n",
     "\n",
     "The underlying idea of this function is to approximate $\\pi$ using a simple procedure:\n",
@@ -68,13 +67,6 @@
     "    ax.set_title('Ratio of points over all draws: {0}/{1}={2}'.format(targeted, sample, targeted/sample))\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -157,13 +149,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "HTML(ani.to_html5_video())  # Need ffmpeg installed on your machine"
    ]
@@ -217,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exemple 2: fonction matricielle (sans utiliser numpy)"
+    "# Example 2: matrix function (without using numpy)"
    ]
   },
   {
@@ -248,13 +233,13 @@
     "        for i in range(a.shape[0]):\n",
     "            trace += a[i, i]\n",
     "        return trace\n",
-    "    # COMPILATION INCLUSE!\n",
+    "    # COMPILATION IS INCLUDED!\n",
     "    start = time.time()\n",
     "    go_fast(x)\n",
     "    end = time.time()\n",
     "    t0.append(end - start)\n",
     "    print(\"Elapsed (with compilation) = %s\" % (end - start))\n",
-    "    # COMPILATION NON INCLUSE, EXECUTER DEPUIS LE CACHE\n",
+    "    # COMPILATION IS NOT INCLUDED, RUN FORM CACHE\n",
     "    start = time.time()\n",
     "    go_fast(x)\n",
     "    end = time.time()\n",
@@ -274,7 +259,7 @@
     "\n",
     "\n",
     "print(all_n_samples)\n",
-    "print(\"Améliorations en pourcentage par rapport au code vanilla\")\n",
+    "print(\"Percentage improvements over vanilla code\")\n",
     "print((t0 - t2) / t2 * 100)\n",
     "print((t1 - t2) / t2 * 100)"
    ]
@@ -283,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exemple 3: descente de gradient avec/sans numba."
+    "# Example 3: Gradient descent with / without numba"
    ]
   },
   {
@@ -334,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exemple 4: Régression logistique"
+    "# Example 4: Logistic regression"
    ]
   },
   {
@@ -414,13 +399,6 @@
     "\n",
     "Parallelization: https://numba.pydata.org/numba-doc/dev/user/parallel.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
