--- a/Numba/Numba.ipynb
+++ b/Numba/Numba.ipynb
@@ -239,7 +239,7 @@
     "    end = time.time()\n",
     "    t0.append(end - start)\n",
     "    print(\"Elapsed (with compilation) = %s\" % (end - start))\n",
-    "    # COMPILATION IS NOT INCLUDED, RUN FORM CACHE\n",
+    "    # COMPILATION IS NOT INCLUDED, RUN FROM CACHE\n",
     "    start = time.time()\n",
     "    go_fast(x)\n",
     "    end = time.time()\n",
