--- a/Numba/Numba.ipynb
+++ b/Numba/Numba.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "# Numba: Compilation \"Just in Time\" (jit)\n",
     "\n",
-    "Numba converts Python functions into optimized machine code at runtime using thhe standard LLVM compiler library. Then the numerical algorithms compiled by Numba in Python can approach the speeds of C or FORTRAN, where the classic loops like in R and matlab, can be a bit slow.\n",
+    "Numba converts Python functions into optimized machine code at runtime using the standard LLVM compiler library. Then the numerical algorithms compiled by Numba in Python can approach the speeds of C or FORTRAN, where the classic loops like in R and matlab, can be a bit slow.\n",
     "\n",
     "https://numba.pydata.org/ see also https://numba.pydata.org/numba-doc/dev/user/jit.html"
    ]
