--- a/Numba/Numba.ipynb
+++ b/Numba/Numba.ipynb
@@ -35,7 +35,7 @@
     "See https://numba.pydata.org/numba-doc/dev/glossary.html#term-nopython-mode for why typing `nopython=True` below.\n",
     "\n",
     "The underlying idea of this function is to approximate $\\pi$ using a simple procedure:\n",
-    "generate points uniformly at random in the set $[0,1] \\times [0,1]$. Keep only the points whose Euclidean norm is smaller than 1. The ratio of points in this area w.r.t. the total number of points is the ratio between the area of this region and the one of $[0,1] \\times [0,1]$. It is is easy to check that this ratio is $\\pi/4$"
+    "generate points uniformly at random in the set $[0,1] \\times [0,1]$. Keep only the points whose Euclidean norm is smaller than 1. The ratio of points in this area w.r.t. the total number of points is the ratio between the area of this region and the one of $[0,1] \\times [0,1]$. It is easy to check that this ratio is $\\pi/4$"
    ]
   },
   {
