--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "## *Arrays* in `numpy`\n",
     "\n",
-    "In `numpy`, vectors, matrices and other mutli-dimensional tensors (arrays with more than 2 dimension) are called *arrays*.\n"
+    "In `numpy`, vectors, matrices and other mutli-dimensional tensors (arrays with more than 2 dimensions) are called *arrays*.\n"
    ]
   },
   {
