--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -648,7 +648,7 @@
    "metadata": {},
    "source": [
     "#### Random seed\n",
-    "Il est utile dans certains contexte de fixer la 'graine' du générateur aléatoire.\n",
+    "Il est utile dans certains contextes de fixer la 'graine' du générateur aléatoire.\n",
     "https://fr.wikipedia.org/wiki/Graine_al%C3%A9atoire"
    ]
   },
