--- a/Scipy/Scipy.ipynb
+++ b/Scipy/Scipy.ipynb
@@ -464,7 +464,7 @@
    "source": [
     "## Algèbre linéaire\n",
     "\n",
-    "Le module de SciPy pour l'algèbre linéaire est `linalg`. Il inclut des routines pour la résolution des systèmes linéaires, recherche de vecteur/valeurs propres, SVD, Pivot de Gauss (LU, cholesky), calcul de déterminant etc.\n",
+    "Le module de SciPy pour l'algèbre linéaire est `linalg`. Il inclut des routines pour la résolution des systèmes linéaires, recherche de vecteurs/valeurs propres, SVD, Pivot de Gauss (LU, cholesky), calcul de déterminant etc.\n",
     "\n",
     "Documentation : http://docs.scipy.org/doc/scipy/reference/linalg.html"
    ]
