--- a/Scipy/Scipy.ipynb
+++ b/Scipy/Scipy.ipynb
@@ -947,7 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans le cas de polynôme on peut le faire directement avec NumPy"
+    "Dans le cas de polynômes on peut le faire directement avec NumPy"
    ]
   },
   {
