colors against colours
spelling error

--- a/Scipy/Scipy.ipynb
+++ b/Scipy/Scipy.ipynb
@@ -752,7 +752,7 @@
    "source": [
     "### <font color='red'> EXERCISE : Bassin of attraction</font>\n",
     "\n",
-    "Draw the points on the curves with 2 different colours : orange for the points leading to find the left local minima, and red for the points leading to the right local minima.\n"
+    "Draw the points on the curves with 2 different colors : orange for the points leading to find the left local minima, and red for the points leading to the right local minima.\n"
    ]
   },
   {
