--- a/TempsMemoire/TempsMemoire.ipynb
+++ b/TempsMemoire/TempsMemoire.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "source": [
     "## Alternatives\n",
-    "Ce type de diagnostique temporelle peut etre aussi fait avec le package `time`, chargé par\n",
+    "Ce type de diagnostic temporel peut être aussi fait avec le package `time`, chargé par\n",
     "\n",
     "```import time```\n"
    ]
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Une première manière de procéder est d'utiliser `pdb` et la commade `pdb.set_trace()` de ce package. Une invite de commande se lance alors quand on a un soucis, et on peut alors reprendre la main voir ce qu'il se passe.\n",
+    "Une première manière de procéder est d'utiliser `pdb` et la commande `pdb.set_trace()` de ce package. Une invite de commande se lance alors quand on a un soucis, et on peut alors reprendre la main voir ce qu'il se passe.\n",
     "\n",
     "On pourra consulter les raccourcis clavier (e.g., touche c, touche j etc) ici: https://docs.python.org/3/library/pdb.html)"
    ]
@@ -259,7 +259,7 @@
    "source": [
     "## Graphs and sparsity\n",
     "\n",
-    "Un cadre classique d'application des matrices creuses est le cadre des graphes: bien que le nombre de noeuds puissent être énorme, chaque noeud d'un graphe n'est en général pas relié à tous ces voisins. Si on représente un graphe par ca matrice d'adjacence:"
+    "Un cadre classique d'application des matrices creuses est le cadre des graphes: bien que le nombre de noeuds puissent être énorme, chaque noeud d'un graphe n'est en général pas relié à tous ses voisins. Si on représente un graphe par sa matrice d'adjacence:"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "## Définition: *matrice d'adjacence*:\n",
     "Supposons que $G=(V,E)$ est un graphe, où $\\left|V\\right|=n$.\n",
     "Supposons que les sommets de $G$ sont numérotés arbitrairement $v_1,\\ldots,v_n$. \n",
-    "La matrice d'adjacence $A$ de $G$ est la matrice $n \\times n$ de terme générale:\n",
+    "La matrice d'adjacence $A$ de $G$ est la matrice $n \\times n$ de terme général:\n",
     "\n",
     "$$a_{ij}=\\left\\{\\begin{array}{rl}\n",
     "\t1 & \\mbox{si } (v_i,v_j) \\in E \\\\\n",
