adding links for exceptions

--- a/Intro-Python/Intro-Python.ipynb
+++ b/Intro-Python/Intro-Python.ipynb
@@ -2854,7 +2854,7 @@
    "metadata": {},
    "source": [
     "## Exceptions\n",
-    "\n",
+    "Sources: see https://fabienmaussion.info/scipro_ss2018/html/09-Exceptions.html\n",
     " * In Python errors are handled through `Exceptions`\n",
     " * An error throw an `Exception` interrupting the normal code execution\n",
     " * L'exécution peut éventuellement reprendre à l'intérieur d'un bloc de code `try` - `except`\n"
